fleet-gitops/20-monitoring/ingress-auth/manifests/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: prometheus
      namespace: monitoring
      sectionName: https
  hostnames:
    - "prometheus.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2
      backendRefs:
        - name: oauth2-proxy-prometheus
          port: 4180
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oauth2-proxy-prometheus
      backendRefs:
        - name: prometheus
          port: 9090
